# merrill_model

./: README.md  pyproject.toml  setup.py
merrill_model/loss/_filter/: custom_looss.py
merrill_model/neuro/: neura.py
